Refactor tests and add utility classes for better structure and readability
- Updated SubmitCommandTest to improve command initialization and mock setup.
- Enhanced AddCommandTest with clearer variable names and improved assertions.
- Refactored ListCommandTest to simplify API call verification and improve readability.
- Improved ListCommandTest and MarkAsFixedCommandTest to ensure proper handling of deprecated APIs and exceptions.
- Introduced CredentialFactory, JsonFactoryProvider, and TransportFactory interfaces for better testability.
- Added CustomException class for handling specific error scenarios.
- Created TestUtils class for utility methods in tests.
- Added PMD ruleset configuration for better code quality enforcement.